fixed margin problem

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 
     <div class="container is-max-desktop">
-        <div class="columns is-centered" id="img-frame-cop">
+        <div class="is-centered" id="img-frame-cop">
             <img-comparison-slider class="img-comp">
                 <img slot="first" src="static/images/img-comp1.jpg" width="500px" height="500px" />
                 <img slot="second" src="static/images/img-comp2.png" width="500px" height="500px" />
