trying to fix margin problem

--- a/index.html
+++ b/index.html
@@ -146,15 +146,18 @@
     <script defer src="https://unpkg.com/img-comparison-slider@7/dist/index.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/img-comparison-slider@7/dist/styles.css" />
 
+    <section class="hero is-small">
+        <div class="container is-max-desktop">
+            <div class="columns is-centered" id="img-frame-cop">
 
-    <div class="container is-max-desktop">
-        <div class="is-centered" id="img-frame-cop">
-            <img-comparison-slider class="img-comp">
-                <img slot="first" src="static/images/img-comp1.jpg" width="500px" height="500px" />
-                <img slot="second" src="static/images/img-comp2.png" width="500px" height="500px" />
-            </img-comparison-slider>
+                <img-comparison-slider class="img-comp">
+                    <img slot="first" src="static/images/img-comp1.jpg" width="500px" height="500px" />
+                    <img slot="second" src="static/images/img-comp2.png" width="500px" height="500px" />
+                </img-comparison-slider>
+            </div>
+
         </div>
-    </div>
+    </section>
 
 
 
